# soundconverter

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AUTHORS  CHANGELOG.old  CNAME  ChangeLog  Containerfile.fedora  Containerfile.ubuntu  Containerfile.ubuntu.latest  Dockerfile  Dockerfile.fedora  Dockerfile.ubuntu  MANIFEST.in  Makefile  Makefile.am  NEWS  README  README.md  README.rst  TODO  autogen.sh  changelog.html  configure.ac  configure.in  index.html  makefile  meson.build  meson_post_install.py  mypy.ini  old-setup.py  pyproject.toml  setup.py  soundconverter.glade  soundconverter.py  soundconverterTests.py  style.css
.github/workflows/: pylint.yml  ruff.yml  tests.yml  tests_docker.yml  tests_fedora.yml  tests_ubuntu.yml  tests_ubuntu_latest.yml
.qwen/: PROJECT_SUMMARY.md
data/: Makefile.am  org.soundconverter.gschema.xml  soundconverter copy.glade  soundconverter.appdata.xml  soundconverter.desktop  soundconverter.desktop.in.in  soundconverter.glade  soundconverter.spec
doc/: Makefile.am  soundconverter.1
docker/: Dockerfile
gstreamer-mp3-encoding-howto/: index.html  index.html~
po/: LINGUAS  Makefile.in.in  POTFILES.in  POTFILES.skip  ar.po  ast.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_FR.po  gl.po  he.po  hi.po  hu.po  it.po  ja.po  ka.po  ko.po  lt.po  lv.po  meson.build  ml.po  ms.po  nb.po  nl.po  (+21 more)
soundconverter/: Makefile.am  __init__.py  batch.py  error.py  fileoperations.py  formats.py  gconfstore.py  gsettings.py  gstreamer.py  main.py  messagearea.py  namegenerator.py  notify.py  queue.py  settings.py  soundconverter.py  soundfile.py  task.py  ui.py  utils.py
soundconverter/audio/: converter.py  task.py  taskqueue.py
soundconverter/common/: constants.py
soundconverter/converter/: gstreamer.py  gstreamersfdgsdf.py
soundconverter/converter/gstreamer/: gstreamer.py
soundconverter/gstreamer/: __init__.py  converter.py  discoverer.py  profiles.py  taskqueue.py
soundconverter/interface/: batch.py  filelist.py  gladewindow.py  mainloop.py  notify.py  preferences.py  theme.py  ui.py
soundconverter/util/: error.py  fileoperations.py  formats.py  formatting.py  logger.py  namegenerator.py  names.py  queue.py  settings.py  soundfile.py  task.py  taskqueue.py
src/: Makefile.am  soundconverter.py  soundconverterTests.py
test/: testBatch.py
tests/: run_tests_docker.sh  test.py  unittests.py  util.py
tests/test data/: a.iso
tests/test data/no tags/: no-tags.flac
tests/testcases/: batch.py  batch_integration.py  converter.py  discoverer.py  fileoperations.py  format.py  formats.py  gui_integration.py  integration.py  names.py  taskqueue.py
