## Process this file with automake to produce Makefile.in

soundconverterdir = $(libdir)/soundconverter/python/soundconverter

soundconverter_PYTHON = \
	__init__.py 	\
	error.py	\
	gstreamer.py	\
	fileoperations.py	\
	namegenerator.py	\
	notify.py	\
	queue.py	\
	settings.py	\
	soundfile.py	\
	task.py	\
	ui.py	\
	utils.py	\
	batch.py


clean-local:
	rm -rf *.pyc *.pyo



